--- a/app/sass/partials/_app.scss
+++ b/app/sass/partials/_app.scss
@@ -1,7 +1,22 @@
 /* Core App styles */
 
-// Header Styles //
+body {
+  font-family: 'Open Sans', Helvetica Neue,  sans-serif;
+  font-size: 14px;
+}
 
+
+//////////////////////////////////////////////
+// Error Messages (not shown by default)
+//////////////////////////////////////////////
+.error {
+  display: none;
+}
+
+
+//////////////////////////////////////////////
+// Header Styles 
+//////////////////////////////////////////////
 header {
 	width: 100%;
 	height: 50px;
@@ -39,11 +54,22 @@ header {
 	a {
 		text-decoration: none;
 		&:hover {
-			color: #7DDCD4;
+			color: $cta-green;
 			cursor: pointer;
 			text-decoration: none;
 		}
 	}
+}
+#nav {
+  display: block;
+  padding: 0;
+  margin: 0;
+  min-width: 964px;
+  overflow: visible;
+  -webkit-font-smoothing: antialiased;
+}
+#main {
+	padding: 25px;
 }
 #logo {
 	font-weight: 600;
@@ -54,33 +80,21 @@ header {
 	padding-right: 60px;
 	color: $text-lightest;
 }
+#username {
+	float:right;
+	padding-right: 15px;
+}
+#logout {
+	float:right;
+}
 #login {
 	float: right;
 }
 
-// Tyopography //
 
-h1 {
-	font-weight: bold;
-	font-size: 2em;
-}
-h2 {
-	font-size: 1.8em;
-	font-weight: bold;
-}
-h3 {
-	font-size: 1.5em;
-}
-h4 {
-	font-size: 1.3em;
-}
-h5 {
-	font-size: 1.1em;
-}
-
-
-// User Card Styles //
-
+//////////////////////////////////////////////
+// User Card Styles 
+//////////////////////////////////////////////
 .user  {
 	color: $text-light;
 	font-size: 12px;
@@ -165,3 +179,15 @@ ul#user-dropdown {
 	color: $text-light;
 }
 
+//////////////////////////////////////////////
+// Create a Project styles
+//////////////////////////////////////////////
+
+
+.createSection {
+	button {
+		float: right;
+		padding: 8px 16px;
+		border: none;
+	}
+}
