--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -6,6 +6,7 @@
 @import "compass/typography/vertical_rhythm";
 @import "compass/utilities/general";
 @import "compass/css3/border-radius"; // CSS3 Border Radius for all browsers
+@import "compass/css3/shared";
 
 /* Custom Partials */
 @import "partials/_variables.scss";	// Variables: Color, size, etc. 
