Small inclusion of a header for the list of projects in projectListView template, and styling for subtle headlines.

--- a/app/components/projects/list/projectListTemplate.hbs
+++ b/app/components/projects/list/projectListTemplate.hbs
@@ -5,6 +5,7 @@
     		<button id="createProject" class="save">Save</button>
     		<label id="projectsError" class="error"></label>
     </div>
+    <h5 class="subtle-headline">projects</h5>
     <ul class="projects">
     </ul>
   </div> 
