--- a/app/sass/partials/_variables.scss
+++ b/app/sass/partials/_variables.scss
@@ -2,11 +2,12 @@
 
 /* Text Colors */
 $text-lightest:     #F5F7F8;   // Light text for use on dark backgrounds
-$text-light:  	#C7D2D6;    // Slightly darker light text for dark backgrounds
-$text-dark:      #404040;    // Dark text for use on light backgrounds
-$text-cta:       #808080;     // Text for call to action/buttons
-$text-hover:     black;
-$cta-green: 	#7DDCD4; 	// Main seafoam/green color for call-to-actions
+$text-light:  	   #C7D2D6;    // Slightly darker light text for dark backgrounds
+$text-subtle: 	   #BFC5D3;	   // Subtle text color on white backgrounds
+$text-dark:        #404040;    // Dark text for use on light backgrounds
+$text-cta:          #808080;     // Text for call to action/buttons
+$text-hover:      black;
+$cta-green: 	  #7DDCD4; 	// Main seafoam/green color for call-to-actions
 
 /* Link Colors */
 $primary:        #AAA;
