--- a/app/components/projects/list/projectListTemplate.hbs
+++ b/app/components/projects/list/projectListTemplate.hbs
@@ -7,5 +7,6 @@
     </div>
     <h5 class="subtle-headline">projects</h5>
     <ul class="projects">
+      {{! ProjectCard(s) load here }}
     </ul>
   </div> 
