--- a/app/components/shots/show/shotShowCardTemplate.hbs
+++ b/app/components/shots/show/shotShowCardTemplate.hbs
@@ -1,5 +1,11 @@
 <a href="/{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }} by {{ user }}</a><br />
 <img src="{{ image }}" id="shotImage" class="shot">
 <p id="shotText">{{ text }}</p>
-<div class="shotCreator"></div>
-<a href="/{{ projectId }}/{{ id }}"><div class="shotComments"></div></a>
+<div class="shotCreator">
+    {{! UserCard loads here }}
+</div>
+<a href="/{{ projectId }}/{{ id }}">
+    <div class="shotComments">
+        {{! CommentsListCard loads here }}
+    </div>
+</a>
