--- a/app/components/users/show/userShowCardTemplate.hbs
+++ b/app/components/users/show/userShowCardTemplate.hbs
@@ -1,1 +1,3 @@
-<span class="arrow-down"></span><img src="{{ profileImage }}" /><span class="username"> {{ username }} </span>
+<span class="arrow-down"></span>
+<img src="{{ profileImage }}" />
+<span class="username"> {{ username }} </span>
