--- a/app/components/projects/list/projectListTemplate.hbs
+++ b/app/components/projects/list/projectListTemplate.hbs
@@ -5,7 +5,7 @@
     		<button id="createProject" class="save">Save</button>
     		<label id="projectsError" class="error"></label>
     </div>
-    <h5 class="subtle-headline">projects</h5>
+    <h5 class="subtle-headline">all projects</h5>
     <ul class="projects">
       {{! ProjectCard(s) load here }}
     </ul>
