Create New button now hides project creation view

--- a/app/components/projects/list/projectListTemplate.hbs
+++ b/app/components/projects/list/projectListTemplate.hbs
@@ -1,5 +1,6 @@
   <div class="view">
-  	<div class="createSection clearfix">
+    <button id="newProject">+ Create New</button>
+  	<div id="createSection" class="createSection clearfix">
     		<label><h3>Create a Project</h3></label>
     		<input id="name" type="textarea" class"input" placeholder="Name your project" autofocus>
     		<button id="createProject" class="save">Save</button>
