Added button text to match mockup

--- a/app/components/shots/list/shotsListTemplate.hbs
+++ b/app/components/shots/list/shotsListTemplate.hbs
@@ -2,7 +2,7 @@
         <label>
             <h3>Screens</h3>
         </label>
-        <button id="newShot">+</button>
+        <button id="newShot">+Add Post</button>
     </div>
     <div class="newShotView">
         <input id="image" type="url" class="input" size="58" placeholder="Enter a URL to an image">
