Resized shot card image

--- a/app/components/shots/show/shotShowCardTemplate.hbs
+++ b/app/components/shots/show/shotShowCardTemplate.hbs
@@ -1,5 +1,5 @@
 <a href="/{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }} by {{ user }}</a><br />
-<img src="{{ image }}" id="shotImage" class="shot">
+<img src="{{ image }}" class="shotImage">
 <p id="shotText">{{ text }}</p>
 <div class="shotCreator">
     {{! UserCard loads here }}
