--- a/app/sass/partials/_shots.scss
+++ b/app/sass/partials/_shots.scss
@@ -26,8 +26,20 @@
 
 /* Single Shot */
 .shot {
-  width: 50%;
+
+  // Can be displayed in list or standalone
+  width: 100%;
   padding-top: 40px;
+
+  &.card {
+    // Shot displayed in a list
+    width: 30%;
+
+    & img.shotImage {
+      // Image of shot used within a shot card
+      width: 100%;
+    }
+  }
 
   & p #saveShot {
     // Save button is hidden until editing is enabled 
