Single shot is now 'full width' within container

--- a/app/components/shots/show/shotShowTemplate.hbs
+++ b/app/components/shots/show/shotShowTemplate.hbs
@@ -2,7 +2,7 @@
     Posted {{ time }} by {{ user }}
 </a>
 <br />
-<img src="{{ image }}" id="shotImage" class="shot">
+<img src="{{ image }}" class="shotImage">
 <p id="shotText">{{ text }}</p>
     {{#if owner}}
       <p class="shotSettings">
